[package]
name = "acled"
version = "0.1.0"
authors = ["Michael Van Wickle <vanwickle.m@husky.neu.edu>"]

[dependencies]
chrono = { version = "0.2", features = ["serde", "rustc-serialize"] }
csv = "0.14.7"
nickel = "*"
rustc-serialize = "0.3.19"
postgres = { version = "0.12", features = ["with-chrono"] }
